# delta

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: .gitignore  App.tsx  app.json  package-lock.json  package.json
app/__tests__/: onionRoute.test.ts
app/android/: build.gradle  gradle.properties  settings.gradle
app/ios/: Podfile
core/: Cargo.toml  build-android.sh  build.rs
core/.cargo/: config.toml
core/src/: auth.rs  blobs.rs  crypto.rs  db.rs  delta_core.udl  encryption.rs  gardens_core.udl  keys.rs  lib.rs  network.rs  onion.rs  ops.rs  pkarr_publish.rs  projector.rs  sealed_sender.rs  store.rs  sync.rs  sync_config.rs
docs/plans/: 2026-02-21-delta-design.md  2026-02-21-implementation-plan.md  2026-02-21-phase3-networking-design.md  2026-02-21-phase3-networking.md  2026-02-21-phase4-encryption-design.md  2026-02-21-phase4-encryption.md  2026-02-22-phase7-blobs-design.md  2026-02-22-phase7-implementation.md  2026-02-28-org-chat-drawer-design.md  2026-02-28-org-chat-drawer.md  2026-03-01-do-sync-design.md  2026-03-01-do-sync-implementation.md  2026-03-01-relay-infrastructure.md  2026-03-02-stripe-connect-payments-design.md  2026-03-06-email-implementation.md  2026-03-06-inbound-email-pkarr-mx.md  2026-03-06-p2p-blob-passthrough-remaining.md  2026-03-06-p2p-blob-passthrough.md  2026-03-07-ignore-dnd-key-rotation-design.md  phase4-completion-summary.md  phase4-production-api-approach.md  phase5-completion-summary.md  phase5-full-implementation-summary.md  phase5-nfc-setup.md  (+4 more)
relay/: package-lock.json  package.json  tsconfig.json  wrangler.toml
sync/: package-lock.json  package.json  wrangler.toml
web/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+118 files in other folders)
